# collector-tester

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: error.rs  lib.rs  prelude.rs
src/assert/: extensions.rs  mod.rs
src/container/: collector.rs  config.rs  mod.rs
src/input/: fixture.rs  generator.rs  mod.rs  sdk.rs
src/monitor/: memory.rs  mod.rs
tests/: failover_test.rs  loadbalancing_test.rs  resource_attributes_test.rs  spanmetrics_test.rs  traces_test.rs
tests/common/: mod.rs
tests/common/configs/: basic.yaml  failover.yaml  loadbalancing.yaml  resource-attributes.yaml  spanmetrics.yaml
