[package]
name = "collector-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.4"
futures-util = "0.3.31"
mock-collector = "0.2.6"
opentelemetry = { version = "0.31.0", features = ["logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "logs"] }
testcontainers = { version = "0.26.3", features = ["http_wait_plain"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
